--- a/Deaths_Kingdom.uproject
+++ b/Deaths_Kingdom.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "MotionWarping",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
